fixed landing page alignment

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@ body {
 h1 {
   margin: 0;
 }
+#root {
+  min-height: 100vh;
+}
+.root {
+  min-height: 100vh;
+}
 .body {
   min-height: 100vh;
   display:none;
@@ -242,9 +248,12 @@ footer {
 }
 
 .welcome {
+  min-height: 100vh;
   max-height: 100vh;
   width: 100vw;
-
+  overflow-y: hidden;
+  position: relative;
+  
   
 }
 
@@ -271,13 +280,16 @@ footer {
 
 .welcome--content {
   width: 40vw;
-  height: 50vh;
-  padding-top: 7.5%;
+  max-height: 50vh;
+  padding-top: 15%;
   text-align: center;
   margin: auto;
   animation: fadeInAnimation ease 4s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  display: block;
+  bottom: 0;
+  
 }
 
 .welcome--search {
@@ -288,6 +300,7 @@ footer {
   animation: fadeInAnimationSearch ease 6s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  display: block;
 }
 
 input {
@@ -335,6 +348,18 @@ input {
 
 .transform-active {
   opacity: 0;
+}
+
+.welcome--image {
+  height: 80px;
+  width: 80px;
+  margin: auto;
+  line-height: 80px;
+  display: inline;
+}
+
+h2 {
+  margin: 0;
 }
 
 
